--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -1,5 +1,6 @@
 .linha-header {
     width: 100vw;
     height: 5px;
-    background-color: #fcc1c1;
+    /* background-color: #fcc1c1; */
+    background-color: black;
 }
