--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,7 +1,9 @@
 .container-navbar {
     width: 100vw;
     height: 57px;
-    background-color: #008e49;
+    /* background-color: #008e49; */
+    background-color: #fcc1c1;
+
     display: flex;
     justify-content: space-between;
     padding: 0 300px;
@@ -28,7 +30,9 @@
 }
 
 .container-navbar div:hover {
-    background-color: #fcc1c1;
+    /* background-color: #fcc1c1; */
+    background-color: black;
+    transform: scale(1.1);
 }
 
 .redes-sociais img:hover {
